Mudanças em algumas telas

--- a/BlazorApp/Components/Account/Pages/Manage/PersonalData.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/PersonalData.razor
@@ -9,21 +9,20 @@
 <PageTitle>Personal Data</PageTitle>
 
 <StatusMessage />
-<h3>Personal Data</h3>
+<h3>Dados Pessoais</h3>
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-        </p>
-        <form action="Account/Manage/DownloadPersonalData" method="post">
-            <AntiforgeryToken />
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a href="Account/Manage/DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+        <p>Sua conta contém os dados da sua conta. Esta página permite você baixar ou deletar esses dados.</p>
+        <div class="flex-row" style="display: flex; gap: 60px">
+            <form action="Account/Manage/DownloadPersonalData" method="post">
+                <AntiforgeryToken />
+                <button class="btn btn-primary" type="submit">Baixar</button>
+            </form>
+            <p>
+                <a href="Account/Manage/DeletePersonalData" class="btn btn-danger">Deletar</a>
+            </p>
+        </div>
     </div>
 </div>
 
@@ -33,7 +32,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var user  = await UserManager.GetUserAsync(HttpContext.User);
+        var user = await UserManager.GetUserAsync(HttpContext.User);
         if (user is null)
         {
             RedirectManager.RedirectToInvalidUser(UserManager, HttpContext);
