--- a/BlazorApp/Components/Account/Pages/Manage/Index.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/Index.razor
@@ -10,14 +10,14 @@
 
 <PageTitle>Profile</PageTitle>
 
-<h3>Profile</h3>
+<h3>Perfil</h3>
 <StatusMessage />
 
 <div class="row">
     <div class="col-xl-6">
         <EditForm Model="Input" FormName="profile" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
+            @* <ValidationSummary class="text-danger" role="alert" /> *@
             <div class="form-floating mb-3">
                 <input type="text" value="@username" id="username" class="form-control" placeholder="Choose your username." disabled />
                 <label for="username" class="form-label">Username</label>
