--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-3 px-md-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" style="color:white" target="_blank">Documentação</a>
+            <a href="https://github.com/MateusLecchiDev/BlazorApp" style="color:white" target="_blank">GitHub</a>
         </div>
 
         <article class="content px-3 px-md-4">
