--- a/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
@@ -9,9 +9,9 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>Mudar senha</PageTitle>
 
-<h3>Change password</h3>
+<h3>Mude sua senha</h3>
 <StatusMessage Message="@message" />
 <div class="row">
     <div class="col-xl-6">
@@ -19,21 +19,21 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Enter the old password" />
-                <label for="Input.OldPassword" class="form-label">Old password</label>
+                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Digite sua senha antiga" />
+                <label for="Input.OldPassword" class="form-label">Senha antiga</label>
                 <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Digite a nova senha" />
+                <label for="Input.NewPassword" class="form-label">Senha nova</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Confirme a nova senha" />
+                <label for="Input.ConfirmPassword" class="form-label">Confirme a senha</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Atualizar senha</button>
         </EditForm>
     </div>
 </div>
