--- a/BlazorApp/Components/Account/Pages/Manage/Index.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/Index.razor
@@ -8,7 +8,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Profile</PageTitle>
+<PageTitle>Perfil</PageTitle>
 
 <h3>Perfil</h3>
 <StatusMessage />
@@ -19,15 +19,15 @@
             <DataAnnotationsValidator />
             @* <ValidationSummary class="text-danger" role="alert" /> *@
             <div class="form-floating mb-3">
-                <input type="text" value="@username" id="username" class="form-control" placeholder="Choose your username." disabled />
-                <label for="username" class="form-label">Username</label>
+                <input type="text" value="@username" id="username" class="form-control" placeholder="Escolha seu nome de usuário." disabled />
+                <label for="username" class="form-label">Nome de Usuário</label>
             </div>
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.PhoneNumber" id="Input.PhoneNumber" class="form-control" placeholder="Enter your phone number" />
-                <label for="Input.PhoneNumber" class="form-label">Phone number</label>
+                <InputText @bind-Value="Input.PhoneNumber" id="Input.PhoneNumber" class="form-control" placeholder="Entre com seu número de telefone" />
+                <label for="Input.PhoneNumber" class="form-label">Número de Telefone</label>
                 <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Salvar</button>
         </EditForm>
     </div>
 </div>
