--- a/BlazorApp/Components/Account/Pages/Manage/PersonalData.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/PersonalData.razor
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-6">
         <p>Sua conta contém os dados da sua conta. Esta página permite você baixar ou deletar esses dados.</p>
-        <div class="flex-row" style="display: flex; gap: 60px">
+        <div class="flex-row d-flex gap-2">
             <form action="Account/Manage/DownloadPersonalData" method="post">
                 <AntiforgeryToken />
                 <button class="btn btn-primary" type="submit">Baixar</button>
