--- a/BlazorApp/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -8,10 +8,10 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Two-factor authentication (2FA)</PageTitle>
+<PageTitle>Autenticação de Dois-fatores</PageTitle>
 
 <StatusMessage />
-<h3>Two-factor authentication (2FA)</h3>
+<h3>Autenticação Dois-fatores (2FA)</h3>
 @if (canTrack)
 {
     if (is2faEnabled)
@@ -19,22 +19,22 @@
         if (recoveryCodesLeft == 0)
         {
             <div class="alert alert-danger">
-                <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+                <strong>Você tem nenhum código de recuperação restante.</strong>
+                <p>Você deve <a href="Account/Manage/GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a> antes de você poder entrar com um código de recuperação.</p>
             </div>
         }
         else if (recoveryCodesLeft == 1)
         {
             <div class="alert alert-danger">
-                <strong>You have 1 recovery code left.</strong>
-                <p>You can <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <strong>Você tem 1 código de recuperação restante.</strong>
+                <p>Você pode <a href="Account/Manage/GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a>.</p>
             </div>
         }
         else if (recoveryCodesLeft <= 3)
         {
             <div class="alert alert-warning">
-                <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <strong>Você tem @recoveryCodesLeft códigos de recuperação restantes.</strong>
+                <p>Você deveria <a href="Account/Manage/GenerateRecoveryCodes">gerar um novo conjunto de códigos de recuperação</a>.</p>
             </div>
         }
 
@@ -42,30 +42,29 @@
         {
             <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
                 <AntiforgeryToken />
-                <button type="submit" class="btn btn-primary">Forget this browser</button>
+                <button type="submit" class="btn btn-primary">Esqueça esse navegador</button>
             </form>
         }
 
-        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Disable 2FA</a>
-        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
+        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Desabilitar 2FA</a>
+        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Resetar códigos de recuperação</a>
     }
 
-    <h4>Authenticator app</h4>
     @if (!hasAuthenticator)
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Adicionar app authenticator</a>
     }
     else
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Configurar app authenticator</a>
+        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Resetar app authenticator</a>
     }
 }
 else
 {
     <div class="alert alert-danger">
-        <strong>Privacy and cookie policy have not been accepted.</strong>
-        <p>You must accept the policy before you can enable two factor authentication.</p>
+        <strong>A política de privacidade e de cookies não foi aceita.</strong>
+        <p>Você deve aceitar a política de privacidade antes de poder habilitar a autenticação de dois fatores.</p>
     </div>
 }
 
