--- a/BlazorApp/Components/Pages/ContactPages/Create.razor
+++ b/BlazorApp/Components/Pages/ContactPages/Create.razor
@@ -5,18 +5,18 @@
 @inject ApplicationDbContext Db
 @inject NavigationManager NavigationManager
 
-<PageTitle>Create</PageTitle>
+<PageTitle>Criar</PageTitle>
 
 <h1>Criar Contato</h1>
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-12 col-sm-10 col-md-6 col-lg-4">
         <EditForm EditContext="editContext" OnValidSubmit="AddContact" FormName="create" Enhance>
             <DataAnnotationsValidator />
             @* <ValidationSummary class="text-danger" role="alert"/> *@
             <div class="mb-3">
-                <label for="name" class="form-label">Name:</label>
+                <label for="name" class="form-label">Nome:</label>
                 <InputText id="name" @bind-Value="Contact.Name" class="form-control" />
                 <ValidationMessage For="() => Contact.Name" class="text-danger" />
             </div>
@@ -25,12 +25,13 @@
                 <InputText id="email" @bind-Value="Contact.Email" class="form-control" />
                 <ValidationMessage For="() => Contact.Email" class="text-danger" />
             </div>
-            <button type="submit" class="btn btn-primary">Criar</button>
+            <div class="d-flex gap-2">
+                <button type="submit" class="btn btn-primary">Criar</button>
+                <button type="button" class="btn btn-secondary" @onclick="BackToContacts">Voltar</button>
+            </div>
         </EditForm>
     </div>
 </div>
-
-<button class="btn btn-secondary ms-3 mt-3" @onclick="BackToContacts">Voltar</button>
 
 @code {
     private Contact Contact { get; set; } = new();
