--- a/BlazorApp/Components/Pages/ContactPages/Delete.razor
+++ b/BlazorApp/Components/Pages/ContactPages/Delete.razor
@@ -1,33 +1,38 @@
 ﻿@page "/contacts/delete"
+@rendermode InteractiveServer
 @using Microsoft.EntityFrameworkCore
 @using BlazorApp.Data
 @inject ApplicationDbContext Db
 @inject NavigationManager NavigationManager
 
-<PageTitle>Delete</PageTitle>
+<PageTitle>Deletar</PageTitle>
 
-<h1>Delete</h1>
+<h2>Deletar Contato</h2>
 
-<p>Are you sure you want to delete this?</p>
+<p class="text-danger">Você tem certeza que deseja deletar este contato?</p>
 <div>
-    <h2>Contact</h2>
     <hr />
     @if (contact is null)
     {
         <p><em>Loading...</em></p>
     }
-    else {
-        <dl class="row">
-            <dt class="col-sm-2">Name</dt>
-            <dd class="col-sm-10">@contact.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Email</dt>
-            <dd class="col-sm-10">@contact.Email</dd>
-        </dl>
+    else
+    {
+        <div class="card mb-3 shadow-sm">
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>Nome:</strong> @contact.Name
+                </p>
+                <p class="card-text">
+                    <strong>Email:</strong> @contact.Email
+                </p>
+            </div>
+        </div>
         <EditForm method="post" Model="contact" OnValidSubmit="DeleteContact" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(contact is null)">Delete</button> |
-            <a href="/contacts">Back to List</a>
+            <div class="d-flex gap-2">
+                <button type="submit" class="btn btn-danger" disabled="@(contact is null)">Deletar</button>
+                <button type="button" class="btn btn-primary" @onclick="BackToContacts">Voltar</button>
+            </div>
         </EditForm>
     }
 </div>
@@ -52,6 +57,11 @@
     {
         Db.Contacts.Remove(contact!);
         await Db.SaveChangesAsync();
+        NavigationManager.NavigateTo("/contacts");
+    }
+
+    private void BackToContacts()
+    {
         NavigationManager.NavigateTo("/contacts");
     }
 }
