Mudanças em algumas páginas do Registro. Adicionado o arquivo para customizar as mensagens de erro do Identity, deixando em português e adicionando ele no program onde tem o AddIdentityCore para esse custom funcionar, junto também com os CultureInfo para evitar qualquer problema.

--- a/BlazorApp/Components/Pages/ContactPages/Edit.razor
+++ b/BlazorApp/Components/Pages/ContactPages/Edit.razor
@@ -19,7 +19,7 @@ else
         <div class="col-md-4">
             <EditForm method="post" Model="Contact" OnValidSubmit="UpdateContact" FormName="edit" Enhance>
                 <DataAnnotationsValidator />
-                <ValidationSummary role="alert" />
+                @* <ValidationSummary role="alert" /> *@
                 <input type="hidden" name="Contact.Id" value="@Contact.Id" />
                 <div class="mb-3">
                     <label for="name" class="form-label">Nome:</label>
