--- a/BlazorApp/Components/Account/Pages/ConfirmEmail.razor
+++ b/BlazorApp/Components/Account/Pages/ConfirmEmail.razor
@@ -8,9 +8,9 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email</PageTitle>
+<PageTitle>Confirmar email</PageTitle>
 
-<h1>Confirm email</h1>
+<h2>Confirmar email</h2>
 <StatusMessage Message="@statusMessage" />
 
 @code {
@@ -43,7 +43,7 @@
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            statusMessage = result.Succeeded ? "Obrigado por confirmar seu email." : "Erro ao confirmar seu email.";
         }
     }
 }
