--- a/BlazorApp/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/BlazorApp/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -51,7 +51,7 @@
 
         RedirectManager.RedirectToWithStatus(
             "Account/Manage/EnableAuthenticator",
-            "Your authenticator app key has been reset, you will need to configure your authenticator app using the new key.",
+            "Seu app authenticator foi resetado, você vai precisar configurar seu app authenticator usando a nova chave.",
             HttpContext);
     }
 }
