--- a/BlazorApp/Components/Account/Pages/RegisterConfirmation.razor
+++ b/BlazorApp/Components/Account/Pages/RegisterConfirmation.razor
@@ -10,22 +10,22 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Register confirmation</PageTitle>
+<PageTitle>Confirmação do Registro</PageTitle>
 
-<h1>Register confirmation</h1>
+<h1>Confirmação do Registro</h1>
 
 <StatusMessage Message="@statusMessage" />
 
 @if (emailConfirmationLink is not null)
 {
     <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+        Essa aplicação não possui atualmente um remetente de e-mail real registrado, consulte <a href="https://aka.ms/aspaccountconf">esse documento</a> para saber como configurar um remetente de e-mail real.
+        Normalmente isso seria enviado por e-mail: <a href="@emailConfirmationLink">Clique aqui para confirmar sua conta</a>
     </p>
 }
 else
 {
-    <p role="alert">Please check your email to confirm your account.</p>
+    <p role="alert">Por favor olhe seu e-mail para confirmar sua conta.</p>
 }
 
 @code {
