--- a/BlazorApp/Components/Account/Pages/Login.razor
+++ b/BlazorApp/Components/Account/Pages/Login.razor
@@ -156,7 +156,7 @@
         }
         else
         {
-            errorMessage = "Error: Invalid login attempt.";
+            errorMessage = "Erro: Tentativa de login inválida.";
         }
     }
 
